Made some layout adjustments on the shop and binder. Set the scrollbar to always appear to stop layout shifts

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -17,6 +17,11 @@
     --main-text: "Inder"
 }
 
+html {
+    overflow-y: scroll;
+}
+
+
 /* Linear gradient colour for the body using root variables */
 body {
     background-image: linear-gradient(90deg,
@@ -75,7 +80,6 @@ select {
 /* Style options inside a select */
 option {
     font-size: 1rem;
-    background-color: var(--ecstatic-red);
 }
 
 /* Positions the messages div near the top of the main container */
@@ -411,10 +415,23 @@ option {
         font-size: 2.6rem;
     }
 
+    select {
+        margin-bottom: 1rem;
+    }
+
     .nav-link {
         font-size: 1.2rem;
     }
+
+    #shop-heading {
+        margin-top: 2.5rem !important;
+    }
+
+    #shop-heading p {
+        margin-bottom: 1.5rem;
+    }
 }
+
 
 /* Media query for screens 2560px and up */
 @media screen and (min-width:2560px) {
@@ -491,6 +508,7 @@ option {
         font-size: 1.8rem;
         padding: 2.2rem;
     }
+
 
     #shop-heading {
         margin-top: 6rem !important;
